[gd_scene load_steps=19 format=2]

[ext_resource path="res://drone.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://highlight.png" type="Texture" id=3]
[ext_resource path="res://light.png" type="Texture" id=4]
[ext_resource path="res://Camera.gd" type="Script" id=5]
[ext_resource path="res://energy_icon.png" type="Texture" id=6]
[ext_resource path="res://overlay.png" type="Texture" id=7]
[ext_resource path="res://uwucoin.png" type="Texture" id=8]
[ext_resource path="res://menu.png" type="Texture" id=9]
[ext_resource path="res://convoyeur.png" type="Texture" id=10]
[ext_resource path="res://mine.png" type="Texture" id=11]
[ext_resource path="res://forge.png" type="Texture" id=12]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 20.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "New Anim",
"speed": 20.0
} ]

[sub_resource type="DynamicFontData" id=5]
font_path = "res://FiraSans-Medium.otf"

[sub_resource type="DynamicFont" id=6]
font_data = SubResource( 5 )

[node name="Player" type="Node2D"]
script = ExtResource( 2 )

[node name="Camera" type="Camera2D" parent="."]
current = true
process_mode = 0
script = ExtResource( 5 )

[node name="TileGlow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.627451 )
texture = ExtResource( 3 )

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 4 )
animation = "New Anim"
frame = 1
playing = true

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -2.83035, -4.95874 )
scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 4 )
energy = 0.8
mode = 2
shadow_enabled = true

[node name="overlay" type="Sprite" parent="."]
light_mask = 0
position = Vector2( -373.58, -200.985 )
scale = Vector2( 0.584377, 0.416162 )
texture = ExtResource( 7 )

[node name="Energy" type="RichTextLabel" parent="."]
light_mask = 0
margin_left = -460.0
margin_top = -285.471
margin_right = -309.0
margin_bottom = -256.471
rect_pivot_offset = Vector2( 27.5482, 0 )
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "text"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coins" type="RichTextLabel" parent="."]
light_mask = 0
margin_left = -460.0
margin_top = -249.47
margin_right = -309.0
margin_bottom = -220.47
rect_pivot_offset = Vector2( 27.5482, 0 )
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "UÏ‰UCoins: 0"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="energy_icon" type="Sprite" parent="."]
light_mask = 0
position = Vector2( -487.922, -274.801 )
scale = Vector2( 0.247882, 0.278825 )
texture = ExtResource( 6 )

[node name="uwucoin" type="Sprite" parent="."]
light_mask = 0
position = Vector2( -488.457, -240 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 8 )

[node name="menu" type="Sprite" parent="."]
light_mask = 0
position = Vector2( 0, 375 )
texture = ExtResource( 9 )

[node name="machine_list" type="Node2D" parent="menu"]
position = Vector2( 0, -375 )

[node name="convoyeur" type="Sprite" parent="menu/machine_list"]
light_mask = 0
position = Vector2( -384, 387.656 )
texture = ExtResource( 10 )

[node name="forge" type="Sprite" parent="menu/machine_list"]
light_mask = 0
position = Vector2( -185, 386 )
texture = ExtResource( 12 )

[node name="mine" type="Sprite" parent="menu/machine_list"]
light_mask = 0
position = Vector2( -82, 386 )
texture = ExtResource( 11 )
